crates/reinhardt-core/macros/tests/ui/model/fail/server_only_info.stderr
error[E0422]: cannot find struct, variant or union type `SecretInfo` in this scope
  --> tests/ui/model/fail/server_only_info.rs:15:10
   |
15 |     let _ = SecretInfo { id: 1 };
   |             ^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `Secret: InfoModel` is not satisfied
  --> tests/ui/model/fail/server_only_info.rs:14:22
   |
14 |     assert_info_model::<Secret>();
   |                         ^^^^^^ unsatisfied trait bound
   |
help: the trait `InfoModel` is not implemented for `Secret`
  --> tests/ui/model/fail/server_only_info.rs:6:1
   |
 6 | struct Secret {
   | ^^^^^^^^^^^^^
help: this trait has no implementations, consider adding one
  --> tests/ui/model/fail/../support.rs
   |
   |     pub trait InfoModel {
   |     ^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_info_model`
  --> tests/ui/model/fail/server_only_info.rs:11:25
   |
11 | fn assert_info_model<T: model_info::InfoModel<PrimaryKey = i64>>() {}
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_info_model`
